[ui] Added plotting of wind and temperature data, stub for wind rose.

--- a/application/src/config.json
+++ b/application/src/config.json
@@ -2,7 +2,9 @@
     "heading": "Меню",
     "tabNames": ["Аналіз метереологічних даних регіону"],
     "plotsNames": {
-        "timePlot" : "Температурні умови",
-        "modePlot" : "Тривалість температурних режимів"
+        "tempTimePlot" : "Температурні умови",
+        "tempModePlot" : "Тривалість температурних режимів",
+        "windModePlot" : "Тривалість режимів вітрової активності",
+        "windRosePlot" : "Роза вітрів"
     }
 }
