--- a/server/build.gradle
+++ b/server/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.0.2.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.2.RELEASE'
 
+    compile group: 'com.fasterxml.jackson.module', name: 'jackson-modules-java8', version: '2.8.5', ext: 'pom'
+
     compile group: 'org.hibernate', name: 'hibernate-java8', version: '5.2.17.Final'
     compile("mysql:mysql-connector-java")
     compile group: 'com.google.guava', name: 'guava', version: '25.0-jre'
