--- a/server/build.gradle
+++ b/server/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 bootJar {
-    baseName = 'interpolation-weather-data'
+    baseName = 'weather-data-server'
     version =  '0.1.0'
 }
 
