[ui] Added comment, fixed noreferrer warning.

--- a/application/src/config.json
+++ b/application/src/config.json
@@ -6,6 +6,6 @@
         "tempTimePlot" : "Температурні умови",
         "tempModePlot" : "Тривалість температурних режимів",
         "windModePlot" : "Тривалість режимів вітрової активності",
-        "windRosePlot" : "Роза вітрів"
+        "windRosePlot" : "Роза вітрів (%)"
     }
 }
